# UAVAgroState

./: .gitignore  CMakeLists.txt  Calibration.h  Color.h  CommonFunctions.h  Doxyfile  FSManager.h  IndexCalculation.h  Performance.h  README.md  Redaction.h  Segmentation.h  Stitcher.h  UAVAgroStateCalibration.h  UAVAgroStateIndexCalcs.h  UAVAgroStateStitcher.h  Undistort.h  UtilInformation.h  funcionesutiles.h  helloworld  helloworld.cc  main  main.cpp  pdi_functions.cpp  pdi_functions.h
latex/: annotated.tex  classCalibration.tex  classColor.tex  classCommonFunctions.tex  classFSManager.tex  classIndexCalculation.tex  classPerformance.tex  classRedaction.tex  classSegmentation.tex  classUndistort.tex  classUtilInformation.tex  classuav_1_1Stitcher.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
