cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( main )
find_package( OpenCV REQUIRED )
find_package(Ceres REQUIRED)
include_directories(${CERES_INCLUDE_DIRS})
add_definitions(-DEIGEN_DONT_ALIGN)
add_executable( main main.cpp )
target_link_libraries( main ceres ${OpenCV_LIBS})

